# hulkdeer

./: .gitignore  .gitignore_global
courses/algorithms/hw/: h1.tex
courses/arch_hetergeneous/CUDA/: Makefile  README.txt  max.cu
courses/data_2_knowledge/hw/2/: Newell_Yanhaona_Graphs_HW2.docx  Newell_Yanhaona_HW2.R  Newell_Yanhaona_HW2_addendum.R  Newell_Yanhaona_HW2_plots.docx
courses/data_2_knowledge/hw/3/: Newell_Yanhaona_HW3.R  Newell_Yanhaona_HW3_PLOTS.docx  lottery.R
courses/data_2_knowledge/hw/4/: newell_yanhaona_hw4.R  newell_yanhaona_hw4_graphs.docx
courses/data_2_knowledge/hw/5/: Newell_Yanhaona_Steiner_HW5.R
courses/data_2_knowledge/project/: GeneProject.R  genes.csv  writeup.docx
courses/data_to_knowledge/: Newell_Yanhaona_HW3_addendum.R  hw1-submission-format.R  newell_lastname2_hw1.R  newell_yanhaona_hw3a.R
courses/digital_signal_processing/homework/: hw1.docx  hw1_graphs.xlsx  ~$hw1.docx
courses/image_processing/project/: Makefile  jpeg_sample.cu  run
courses/image_processing/project/presentation/: term_project.pptx
courses/machine_learning/hw1/: h1.tex  references.bib
courses/machine_learning/hw1/eps/: id3_unsupDiscrete_wordRemoveError.eps  j48_confidence.eps  j48_min_objects.eps
courses/machine_learning/hw1/model/: ID3.model  J48.model  JRip.model
courses/machine_learning/midterm/: answers.tex
courses/machine_learning/project/: final_report.docx  project_proposal.tex  references.bib
research/SL/: ece408-lecture24-fall-2011.pptx
research/SL/trunk/FaustValente/: Model.cu  build.xml  cudaconv.m  dofast.sh  doslow.sh  fast1d.cu  naive1d.cu  naive2d.cu  naive3d.cu  template2d.cu  texture.cu
research/SL/trunk/FaustValente/Examples/: .plate.cu.swp  Makefile  PPoPPCell.Nums.txt  PPoPPHotSpot.Nums.txt  PPoPPPathfinder.Nums.txt  PPoPPPlate.Nums.txt  PPoPPPlateHalo.Nums.txt  PPoPPPlatePP.Nums.txt  cell  cell-main.cpp  cell.cu  cell.cu~  cell.h  cell280.txt  cell280PH.txt  foo.txt  foo140.txt  foo150.txt  getnums.sh  hotspot  hotspot-main.cpp  hotspot.cu  hotspot.sl  hotspot2.cu  hotspot2.h  hotspot2.sl  hotspot280.txt  hotspot280PH.txt  hotspot285.txt  hotspot8800.txt  hotspotROFix.cu  path280PH.txt  path280PH2.txt  path285.txt  path285naive.txt  path8800.txt  path8800No16x.txt  path8800naive.txt  pathfinder  pathfinder-main.cpp  (+21 more)
research/SL/trunk/FaustValente/Paper/: Makefile  PPoPP-report.aux  PPoPP-report.bbl  PPoPP-report.bib  PPoPP-report.blg  PPoPP-report.tex  README.txt  ipdps12.aux  ipdps12.bbl  ipdps12.bbl~  ipdps12.blg  ipdps12.dvi  ipdps12.tex  ipdps12.tex~  sc2011_stencil.aux  sc2011_stencil.bbl  sc2011_stencil.blg  sc2011_stencil.dvi  sc2011_stencil.tex  sc2011_stencil.tex~
research/SL/trunk/FaustValente/mpi/: #naive1d.cu#  naive1d.cu  slmpi.h  slmpi.h~
research/SL/trunk/FaustValente/src/: #stencil.l#  Stencil.java  Tool  Tool.java  cell.sl  stencil
research/SL/trunk/Meng/: cudaconv_im_nomemfence.m
research/SL/trunk/Meng/Cell/: Makefile  README.txt  blocksize.h  cell.cu
research/SL/trunk/Meng/HotSpot/: Makefile  README.txt  blocksize.h  hotspot  hotspot.cu
research/SL/trunk/Meng/PathFinder/: Makefile  README.txt  blocksize.h  dynproc.cu
research/SL/trunk/Meng/Poisson/: Makefile  README.txt  blocksize.h  poisson.cu
research/SL/trunk/Newell/: 1dmpi.cu  1dmpi.sl  Makefile  Model.cu  Model.h  build.xml  cell-main.cpp  cell.cu  machinefile.tesla  nbbuild.xml  sc11abstract.docx
research/SL/trunk/Newell/compiler/: Template.java  Token.java  Tokenizer.java
research/SL/trunk/Newell/examples/: Balancer.cpp  Balancer.h  Cluster.cpp  Cluster.h  Decomposition.cpp  Decomposition.h  Model.cu  Model.h  (+9 more)
research/SL/trunk/Newell/examples/cell/tests/: CMakeLists.txt  Makefile  correctness.cpp  cudaOmpCorrectness.cpp  ompMpiCorrectness.cpp  run
research/SL/trunk/Newell/examples/tests/: CMakeLists.txt  Makefile  aggregate.cpp  balanceTest.cpp  comm2DTest.cpp  comm3DTest.cpp  commTest.cpp  profilerTest.cpp  run
research/SL/trunk/Newell/examples/tests/nbproject/: Package-Default.bash  configurations.xml  project.xml
research/VMR/matlab/: CBIR_HOG.m  CBIR_SURF.m  HOGMatrix.m  HOGTest.m  SURFMatrix.m  SURFTest.m  addDescriptorsToTable.m  arffHOG.m  csvHOG.m  csvSURF.m  descriptorStrengthSURF.m  displayHoughlineMatrix.m  displayMatches.m  distanceHOG.m  distanceSURF.m  fastImage.m  generateHOGArffData.m  generateHOGCsvData.m  generateHOGData.m  generateSURFCsvData.m  generateSURFData.m  getBinaryImage.m  getHOGDescriptors.m  getQueryInternalDescriptors.m  getSURFDescriptors.m  houghlineMatrix.m  houghline_building.fig  inRegion.m  renameImages.m  resizeImages.m  runHOG.m  runSURF.m  surfCountCoOccur.m  surfGetInteriorData.m  surfGetInteriorDescriptors.m  surfMatchDescriptors.m  surfNStrongest.m  surfNThreshold.m
research/VMR/reports/: SelfNominationStrategy.tex
research/VMR/src/OpenCVTest/: OpenCVTest.sln  README.rtf
research/VMR/src/cbir/: cbir.sln
(+101 files in other folders)
